node-fetch and jsdom uploaded

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "jsdom": "^16.4.0",
+    "node-fetch": "^2.6.1",
     "pokedex-promise-v2": "^3.3.0",
     "telegraf": "^4.0.2"
   }
