--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "dev": "nodemon bot.js"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,9 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "jsdom": "^16.4.0",
+    "mongoose": "^5.11.15",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7",
     "pokedex-promise-v2": "^3.3.0",
     "telegraf": "^4.0.2",
     "telegram-keyboard": "^2.2.6"
